<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF8E8"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"

        android:paddingLeft="16dp"
        android:paddingTop="5dp"
        android:paddingRight="16dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/txtAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtAdmin"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/mediumPurple"/>

        <TextView
            android:id="@+id/txtAdd"
            android:text="@string/txtAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/txtAdmin"
            app:layout_constraintEnd_toEndOf="@id/txtUsername"
            android:layout_marginStart="30dp"
            android:textSize="20sp"
            android:textColor="@color/mediumPurple"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/txtUsername"
            android:text="@string/txtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toBottomOf="@id/txtAdd"
            app:layout_constraintStart_toStartOf="parent"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtUsername"
            app:layout_constraintStart_toEndOf="@+id/txtUsername"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:hint="@string/hntEditName"
            android:textColorHint="@color/mediumPurple"/>

        <TextView
            android:id="@+id/txtPassword"
            android:text="@string/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toBottomOf="@+id/userName"
            app:layout_constraintEnd_toEndOf="@id/txtUsername"
            android:textSize="14sp"
            android:textStyle="normal"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtPassword"
            app:layout_constraintStart_toEndOf="@+id/txtPassword"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:textSize="14sp"
            android:hint="@string/htnEditPassword"
            android:textColorHint="@color/mediumPurple"/>

        <TextView
            android:id="@+id/txtUpdate"
            android:text="@string/txtUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@id/txtUsername"
            android:textSize="20sp"
            android:textColor="@color/mediumPurple"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/txtUpdateUserName"
            android:text="@string/txtUpdateUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toBottomOf="@id/txtUpdate"
            app:layout_constraintEnd_toEndOf="@id/txtUsername"
            android:textStyle="normal"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/updateUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtUpdateUserName"
            app:layout_constraintStart_toEndOf="@id/txtUpdateUserName"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:textSize="14sp"
            android:textStyle="normal"
            android:hint="@string/hntUpdateUserName"
            android:textColorHint="@color/mediumPurple"/>

        <TextView
            android:id="@+id/txtNewUserName"
            android:text="@string/txtNewUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toBottomOf="@id/txtUpdateUserName"
            app:layout_constraintEnd_toEndOf="@id/txtUsername"
            android:textStyle="normal"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/newUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtNewUserName"
            app:layout_constraintStart_toEndOf="@+id/txtNewUserName"
            android:layout_marginStart="10dp"
            android:textStyle="normal"
            android:ems="10"
            android:textSize="14sp"
            android:hint="@string/htnNewUserName"
            android:textColorHint="@color/mediumPurple"/>

        <TextView
            android:id="@+id/txtDelete"
            android:text="@string/txtDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toBottomOf="@+id/txtNewUserName"
            app:layout_constraintEnd_toEndOf="@id/txtUsername"
            android:textSize="20sp"
            android:textColor="@color/mediumPurple"
            android:textStyle="bold|italic"/>

        <TextView
            android:id="@+id/txtDeleteUserName"
            android:text="@string/txtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toBottomOf="@+id/txtDelete"
            app:layout_constraintEnd_toEndOf="@id/txtUsername"
            android:textStyle="normal"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/deleteUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtDeleteUserName"
            app:layout_constraintStart_toEndOf="@+id/txtDeleteUserName"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:textSize="14sp"
            android:textStyle="normal"
            android:freezesText="false"
            android:hint="@string/hntDelete"
            android:textColorHint="@color/mediumPurple"/>

        <Button
            android:id="@+id/btnViewData"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="4dp"
            android:onClick="view"
            android:text="@string/btnViewData"
            android:textSize="11sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDeleteUserName"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnAddUser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginTop="10dp"
            android:onClick="add"
            android:text="@string/btnAddUser"
            android:textSize="11sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/btnViewData"
            app:layout_constraintTop_toBottomOf="@+id/txtDeleteUserName"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_margin="2dp"
            android:layout_marginStart="4dp"
            android:onClick="update"
            android:text="@string/btnUpdate"
            android:textSize="11sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/btnAddUser"
            app:layout_constraintTop_toBottomOf="@+id/txtDeleteUserName"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:onClick="delete"
            android:text="@string/btnDelete"
            android:textSize="11sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/btnUpdate"
            app:layout_constraintTop_toBottomOf="@+id/txtDeleteUserName"
            app:layout_constraintVertical_bias="1.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>